<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="main_lb_txt">My Nanodegree Apps!</string>
    <string name="spotify_btn_txt">SPOTIFY STREAMER</string>
    <string name="scores_btn_txt">SCORES APP</string>
    <string name="library_btn_txt">LIBRARY APP</string>
    <string name="build_btn_txt">BUILD IT BIGGER</string>
    <string name="xyz_reader_btn_txt">XYZ READER</string>
    <string name="my_app_btn_txt">CAPSTONE: MY OWN APP</string>
</resources>
