<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/main_lb_txt"
                android:id="@+id/mianLabel"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/abc_text_size_headline_material" />

            <Button
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:text="@string/spotify_btn_txt"
                android:id="@+id/spotifyBtn"
                android:layout_gravity="center_horizontal"
                android:minHeight="@dimen/design_fab_size_normal"
                android:background="@color/btnColor"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:text="@string/scores_btn_txt"
                android:id="@+id/scoreAppBtn"
                android:layout_gravity="center_horizontal"
                android:minHeight="@dimen/design_fab_size_normal"
                android:background="@color/btnColor"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:text="@string/library_btn_txt"
                android:id="@+id/libAppBtn"
                android:layout_gravity="center_horizontal"
                android:minHeight="@dimen/design_fab_size_normal"
                android:background="@color/btnColor"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:text="@string/build_btn_txt"
                android:id="@+id/buildItBigBtn"
                android:layout_gravity="center_horizontal"
                android:minHeight="@dimen/design_fab_size_normal"
                android:background="@color/btnColor"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:text="@string/xyz_reader_btn_txt"
                android:id="@+id/xyzReaderBtn"
                android:layout_gravity="center_horizontal"
                android:minHeight="@dimen/design_fab_size_normal"
                android:background="@color/btnColor"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:text="@string/my_app_btn_txt"
                android:id="@+id/myAppBtn"
                android:layout_gravity="center_horizontal"
                android:minHeight="@dimen/design_fab_size_normal"
                android:background="@color/myAppBtnColor"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
